@@ -769,6 +769,8 @@ de.xwic.entitygenerator/templates/javaclass.vtl -text
 de.xwic.entitygenerator/templates/javainterface.vtl -text
 de.xwic.etlgine/.classpath -text
 de.xwic.etlgine/.project -text
+de.xwic.etlgine/.settings/org.codehaus.groovy.eclipse.preferences.prefs -text
+de.xwic.etlgine/.settings/org.eclipse.jdt.core.prefs -text
 de.xwic.etlgine/.settings/org.eclipse.jdt.ui.prefs -text
 de.xwic.etlgine/build.xml -text
 de.xwic.etlgine/changes.txt -text
