@@ -1,0 +1,3 @@
+#Wed May 12 10:54:48 CEST 2010
+eclipse.preferences.version=1
+org.eclipse.jdt.core.builder.resourceCopyExclusionFilter=*.launch,*.groovy
