@@ -27,7 +27,19 @@ $insert.control("table")
 	</tr>	
 	<tr>
 		<td width="80">&nbsp;</td>
-		<td>$insert.control("btUpdate") $insert.control("btDelete") $insert.control("btMoveUp") $insert.control("btMoveDown") $insert.control("btMoveTop") $insert.control("btMoveBtm")</td>
+		<td>
+			<table cellspacing="3" cellpadding="0">
+			 <tr>
+			  <td>$insert.control("btUpdate")</td>
+			  <td>$insert.control("btMassInsert")</td>
+			  <td>$insert.control("btDelete")</td>
+			  <td>$insert.control("btMoveUp")</td>
+			  <td>$insert.control("btMoveDown")</td>
+			  <td>$insert.control("btMoveTop")</td>
+			  <td>$insert.control("btMoveBtm")</td>
+			 </tr>
+			</table>
+		</td>
 		<td>&nbsp;</td>
 	</tr>
 </table>
